refactor and add endpoint for backfill
